<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:text="Question 2 out of 3"
                android:id="@+id/QuezPosition"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:text="Question"
                android:id="@+id/Question"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup">

                <RadioButton
                    android:id="@+id/Male"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/Female"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:layout_marginTop="20dp"
                    android:checked="false"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/Other"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:layout_marginTop="20dp"
                    android:checked="false"
                    android:textSize="18sp" />
            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="1"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:text="Previous"
                android:id="@+id/Previous"
                app:shapeAppearance="@style/rounded"
                android:layout_weight="0.5"
                app:backgroundTint="@color/colorPrimary"
                android:layout_marginEnd="5dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                app:shapeAppearance="@style/rounded"
                android:layout_weight="0.5"
                android:id="@+id/Next"
                android:text="Next"
                app:backgroundTint="@color/colorPrimary"
                android:layout_marginEnd="5dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>
</layout>